// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiToast Props color danger is rendered 1`] = `
<div
  class="euiToast euiToast--danger"
>
  <p
    class="euiScreenReaderOnly css-4l8ha9-euiScreenReaderOnlyStyles"
  >
    A new notification appears
  </p>
  <div
    aria-label="Notification"
    class="euiToastHeader"
    data-test-subj="euiToastHeader"
  >
    <span
      class="euiToastHeader__title"
    >
      test title
    </span>
  </div>
</div>
`;

exports[`EuiToast Props color primary is rendered 1`] = `
<div
  class="euiToast euiToast--primary"
>
  <p
    class="euiScreenReaderOnly css-4l8ha9-euiScreenReaderOnlyStyles"
  >
    A new notification appears
  </p>
  <div
    aria-label="Notification"
    class="euiToastHeader"
    data-test-subj="euiToastHeader"
  >
    <span
      class="euiToastHeader__title"
    >
      test title
    </span>
  </div>
</div>
`;

exports[`EuiToast Props color success is rendered 1`] = `
<div
  class="euiToast euiToast--success"
>
  <p
    class="euiScreenReaderOnly css-4l8ha9-euiScreenReaderOnlyStyles"
  >
    A new notification appears
  </p>
  <div
    aria-label="Notification"
    class="euiToastHeader"
    data-test-subj="euiToastHeader"
  >
    <span
      class="euiToastHeader__title"
    >
      test title
    </span>
  </div>
</div>
`;

exports[`EuiToast Props color warning is rendered 1`] = `
<div
  class="euiToast euiToast--warning"
>
  <p
    class="euiScreenReaderOnly css-4l8ha9-euiScreenReaderOnlyStyles"
  >
    A new notification appears
  </p>
  <div
    aria-label="Notification"
    class="euiToastHeader"
    data-test-subj="euiToastHeader"
  >
    <span
      class="euiToastHeader__title"
    >
      test title
    </span>
  </div>
</div>
`;

exports[`EuiToast Props iconType is rendered 1`] = `
<div
  class="euiToast"
>
  <p
    class="euiScreenReaderOnly css-4l8ha9-euiScreenReaderOnlyStyles"
  >
    A new notification appears
  </p>
  <div
    aria-label="Notification"
    class="euiToastHeader"
    data-test-subj="euiToastHeader"
  >
    <span
      aria-hidden="true"
      class="euiToastHeader__icon"
      data-euiicon-type="user"
    />
    <span
      class="euiToastHeader__title"
    >
      test title
    </span>
  </div>
</div>
`;

exports[`EuiToast Props title is rendered 1`] = `
<div
  class="euiToast"
>
  <p
    class="euiScreenReaderOnly css-4l8ha9-euiScreenReaderOnlyStyles"
  >
    A new notification appears
  </p>
  <div
    aria-label="Notification"
    class="euiToastHeader"
    data-test-subj="euiToastHeader"
  >
    <span
      class="euiToastHeader__title"
    >
      toast title
    </span>
  </div>
</div>
`;

exports[`EuiToast is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiToast testClass1 testClass2"
  data-test-subj="test subject string"
>
  <p
    class="euiScreenReaderOnly css-4l8ha9-euiScreenReaderOnlyStyles"
  >
    A new notification appears
  </p>
  <div
    aria-label="Notification"
    class="euiToastHeader euiToastHeader--withBody"
    data-test-subj="euiToastHeader"
  >
    <span
      class="euiToastHeader__title"
    >
      test title
    </span>
  </div>
  <div
    class="euiText euiText--small euiToastBody"
  >
    <p>
      Hi
    </p>
  </div>
</div>
`;
